--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,6 +53,19 @@ services:
     volumes:
       - demo-postgres-data:/var/lib/postgresql/data
 
+  # pgadmin
+  demo-pgadmin:
+    image: dpage/pgadmin4:latest
+    ports:
+      - "5050:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@example.com
+      - PGADMIN_DEFAULT_PASSWORD=password
+    networks:
+      - demo-network
+    depends_on:
+      - demo-postgres
+
 networks:
   demo-network:
     driver: bridge
