--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
-    "build": "tsc && tsc-alias",
-    "start": "node ./dist/src/index.js"
+    "build": "tsc",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
